--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -86,11 +86,11 @@
                 <i class="fa fa-list"></i> Diagnósticos
               </a>
             </li>
-            <!--<li class="bold">
+            <li class="bold">
               <a href="/condutas" class="waves-effect waves-cyan">
                 <i class="fa fa-list"></i> Condutas
               </a>
-            </li>-->
+            </li>
 
 
             <li class="bold">
