--- a/app/views/avaliacao_sensitivas/_form.html.erb
+++ b/app/views/avaliacao_sensitivas/_form.html.erb
@@ -17,10 +17,10 @@
     
 
 
-  <div class="input-field">
+  <div class="input">
 
     <%= f.label :data %>
-    <%= f.text_field :data, class: "datepicker" %>
+    <%= f.date_field :data %>
     
   </div>
 
